# Portfolio

Python/Energy consumption Linear Regression project/code/: analysis.ipynb
Python/Harass or Bully in EUA project/code/: analysis.ipynb
Python/Melon prices Simple Linear Regression project/code/: analysis.ipynb
Python/Projeto 1/notebooks/: analysis.ipynb
Python/Salaries in IT project/code/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Python/Salary Predict with Simple Linear Regression project/code/: main.ipynb
Python/Salary Predict with Simple Linear Regretion project/code/: main.ipynb
Python/Spotify project/: pyproject.toml  teste.pbix
Python/Spotify project/Datasets/: Most Streamed Spotify 2024.xlsx  analise.ipynb
Python/Youtube videos project/code/: analysis.ipynb
SQL/Criminalidade projeto/: Analise de criminalidade ficticia.sql
Web development/: anotações.md
Web development/base_templates/global/: home.html
Web development/core/: settings.py  urls.py
Web development/recipes/: urls.py  views.py
Web development/recipes/templates/recipes/: home.html
Web development/recipes/templates/recipes/pages/: home.html
Web development/recipes/templates/recipes/partials/: head.html
