[tool.poetry]
name = "spotifyproject"
version = "0.1.0"
description = ""
authors = ["Thiago Pereira <102630741+Dnklht@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.0"
matplotlib = "^3.9.1"
chardet = "^5.2.0"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
